--- a/medida_vs/medida_vs.vcxproj
+++ b/medida_vs/medida_vs.vcxproj
@@ -22,6 +22,7 @@
     <ClInclude Include="src\medida\counter.h" />
     <ClInclude Include="src\medida\histogram.h" />
     <ClInclude Include="src\medida\medida.h" />
+    <ClInclude Include="src\medida\medida_dll.h" />
     <ClInclude Include="src\medida\meter.h" />
     <ClInclude Include="src\medida\metered_interface.h" />
     <ClInclude Include="src\medida\metrics_registry.h" />
@@ -72,7 +73,7 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v140</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
